--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 loadingDiv.classList.add('show');
                 
                 // Cargar el archivo JSON
-                const response = await fetch('locations.json');
+                const response = await fetch('https://raw.githubusercontent.com/AndresSalch/API-Ubicaciones-Costa-Rica/refs/heads/main/locations.json');
                 
                 if (!response.ok) {
                     throw new Error('No se pudo cargar el archivo locations.json');
